plugins {
	id 'org.springframework.boot' version '2.6.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'qikserve.challenge'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.1'
	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer:3.1.1'
	implementation 'junit:junit:4.13.1'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.rest-assured:rest-assured:4.3.3'
	testImplementation 'org.hamcrest:hamcrest-all:1.3'
	testImplementation 'com.github.tomakehurst:wiremock:2.27.2'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '--enable-preview'
}
